# python-buffer-methods

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
src/buffer_methods/: __init__.py  _buffer_methods.pyi  _buffer_methodsmodule.c  _version.pyi  c_methods.h
tests/: test_buffer_methods.py
